fixed overflow issue on orders page

--- a/frontend/src/components/order/Orders.css
+++ b/frontend/src/components/order/Orders.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 600px;
   min-height: 1000px;
   overflow: hidden;
 }
@@ -13,15 +12,15 @@
   flex-direction: column;
   width: 100%;
   z-index: 2;
-  overflow-y: scroll;
-  overflow-x: visible;
+
 }
 
 .ordersContainer {
+  display: flex;
+  flex-direction: column;
   margin: 20px auto;
   max-width: 1400px;
   width: 100%;
-  min-height: 600px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 5px;
